mType/tests/testFiles/annotation/error/array_missing_required_param_error.mt
// MYT-375: required array-valued annotation parameters must be supplied.

annotation RequiredValues {
    string[] names;
}

@RequiredValues
class Bad { }
